# rs-py

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  main.py  nginx.conf  pyproject.toml  setup.sh  supervisor.conf
src/: main.rs
