[project]
name = "rs-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yin", email = "jeremyyin2012@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
